--- a/templates/index.html
+++ b/templates/index.html
@@ -1414,7 +1414,7 @@
                     },
                     success: function(response) {
                       console.log("response", response)
-                        if (isSingleModel && !response.success) {
+                        if (!response.success) {
                             alert(`Error: ${response.error}`);
                             resetButtons(submitBtn, singleModelBtn);
                             return;
